# Preagonal.GLauncher

./: .gitignore  CMakeLists.txt  README.md  Readme.txt
dependencies/detours/: CMakeLists.txt
src/linux/: glauncher.c  glauncher.h
src/osx/: glauncher.m
src/rsc/: conf.gs
src/win/: Memory.hpp  Utils.hpp  defs.h  dxgi.def  dxgi_proxy.cpp  glauncherw.cpp  pch.h  resource_template.h.in  resources.rc  resources_glauncherw.rc  version.def  version_proxy.cpp
